<resources>
    <string name="app_name" translatable="false">AppsDev</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="empty">empty</string>
    <string name="tvHelloHijo1">Hola, soy el Hijo N° 1</string>
    <string name="tvHelloHijo2">Hola, soy el Hijo N° 2</string>
    <string name="tvHelloHijo3">Hola, soy el Hijo N° 3</string>
    <string name="tvAnimaciones">Animaciones</string>
    <string name="tvMostrar">Mostrar</string>
    <string name="tvVenderAhora">Vender ahora</string>
    <string name="tvManzana">Manzana</string>
    <string name="tvPrecio">$ 01.50</string>
    <string name="tvOferta">OFERTA!!</string>
    <string name="tvComprarAhora">Comprar ahora</string>
    <string name="tvCancelar">Cancelar</string>
    <string name="tvMenuDesplegable">Menú desplegable</string>
    <string name="tvAparecer">Aparecer</string>
    <string name="tvDetallesMenuDesplegable">El menú desplegable es un tipo de menú que te permite añadir varios enlaces dentro de un enlace. Se utiliza en casos como por ejemplo, para agrupar las categorías de un blog.</string>
    <string name="tvDesaparecer">Desaparecer</string>
    <string name="tvCamara">Cámara</string>
    <string name="tvGaleria">Galería</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnRecortar">Recortar</string>
    <string name="tvVerFoto"><u>Ver foto</u></string>
    <string name="tvSharedPreferences">Shared preferences</string>
    <string name="tvGuardar">Guardar</string>
    <string name="dash">-</string>
    <string name="lorem">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas \"Letraset\", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</string>
    <string name="tvtituloMotionLayout">Noticia mundial 2022</string>
    <string name="tvAumentar">Aumentar</string>
    <string name="tvDisminuir">Disminuir</string>
</resources>