<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home.SolicitarPermisos.SolicitarPermisos"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/containerButtons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="visible"
        android:layout_marginHorizontal="60dp">
        <Button
            android:id="@+id/btnCamara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCamara"
            android:textAllCaps="false"
            android:backgroundTint="@color/P2"
            app:cornerRadius="20dp"/>

        <Button
            android:id="@+id/btnGaleria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvGaleria"
            android:textAllCaps="false"
            android:backgroundTint="@color/P6"
            android:layout_marginTop="10dp"
            app:cornerRadius="20dp"/>

        <TextView
            android:id="@+id/tvVerFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@drawable/tv_efecto_button"
            android:text="@string/tvVerFoto"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerCropImageView"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.canhub.cropper.CropImageView
            android:id="@+id/cropImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/P2"
                android:text="@string/btnCancelar"
                android:textAllCaps="false"
                app:cornerRadius="15dp" />

            <Space
                android:layout_width="40dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnRecortar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/P2"
                android:text="@string/btnRecortar"
                android:textAllCaps="false"
                app:cornerRadius="15dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>