<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home.Animacion.CardDesplegable.CardDesplegable"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/P2"
        android:layout_marginHorizontal="40dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:id="@+id/contenedorData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tvMenuDesplegable"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btnAparecer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvAparecer"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_marginStart="10dp"
                    app:cornerRadius="10dp"/>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp"/>

            <TextView
                android:id="@+id/tvDetalles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="10dp"
                android:visibility="gone"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:text="@string/tvDetallesMenuDesplegable"
                app:cornerRadius="10dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>